--- a/RayTracing/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing/RayTracing.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="RayTracing.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vec3.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
